Move Zeilberger and Vicary to Past Members

--- a/people.html
+++ b/people.html
@@ -14,8 +14,6 @@
 	<div><a href="http://www.cs.bham.ac.uk/~rahliv/"><img src="photos/rahli.jpg"><br>Vincent Rahli</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~udr"><img src="photos/reddy.jpg"><br>Uday Reddy</a></div>
 	<div><a href="http://www.cs.bham.ac.uk/~exr"><img src="photos/ritter.jpg"><br>Eike Ritter</a></div>
-	<div><a href="http://www.cs.bham.ac.uk/~vicaryjo"><img src="photos/vicary.jpg"><br>Jamie Vicary</a></div>
-	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"><br>Noam Zeilberger</a></div>
 </div>
 
 <h1>Researchers</h1>
@@ -79,4 +77,6 @@
 	<div><a href="http://www.cs.bham.ac.uk/~ais523/"><img src="photos/placeholder.jpg"><br>Alex Smith</a></div>
 	<div><img src="photos/placeholder.jpg"><br>Michael Smyth</div>
 	<div><a href="http://www.cs.bham.ac.uk/~hxt/"><img src="photos/thielecke.jpg"><br>Hayo Thielecke</a></div>
+	<div><a href="https://www.cl.cam.ac.uk/~jv258/"><img src="photos/vicary.jpg"><br>Jamie Vicary</a></div>
+	<div><a href="http://www.cs.bham.ac.uk/~zeilbern"><img src="photos/zeilberger.jpg"><br>Noam Zeilberger</a></div>
 </div>
