--- a/overview.html
+++ b/overview.html
@@ -4,16 +4,16 @@
 
 <p>These are some of our current research programmes, with a list of the main group members leading each activity:
 	<ul>
-		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Vincent Rahli, Uday Reddy, Noam Zeilberger</li>
+		<li><i>Programming languages.</i> Dan Ghica, Achim Jung, Paul Levy, Vincent Rahli, Uday Reddy</li>
 		<li><i>Verification and model checking.</i> Dave Parker, Vincent Rahli, Eike Ritter</li>
-		<li><i>Higher category theory.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Nicolai Kraus, Jamie Vicary</li>
-		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Nicolai Kraus, Steve Vickers</li>
-		<li><i>String diagrams and graphical calculi.</i> Miriam Backens, Dan Ghica, Jamie Vicary, Noam Zeilberger</li>
-		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Eric Finster, Dan Ghica, Nicolai Kraus, Vincent Rahli, Jamie Vicary</li>
+		<li><i>Higher category theory.</i> Benedikt Ahrens, Martin Escardo</li>
+		<li><i>Homotopy type theory and constructive mathematics.</i> Benedikt Ahrens, Martin Escardo, Steve Vickers</li>
+		<li><i>String diagrams and graphical calculi.</i> Miriam Backens, Dan Ghica</li>
+		<li><i>Proof assistants.</i> Benedikt Ahrens, Martin Escardo, Dan Ghica, Vincent Rahli</li>
 		<li><i>Topology and domain theory.</i> Martin Escardo, Achim Jung, Steve Vickers</li>
 		<li><i>Game semantics.</i> Dan Ghica, Paul Levy</li>
-		<li><i>Proof theory and logic.</i> Anupam Das, Achim Jung, Uday Reddy, Noam Zeilberger</li>
-		<li><i>Quantum computation.</i> Miriam Backens, Jamie Vicary</li>
+		<li><i>Proof theory and logic.</i> Anupam Das, Achim Jung, Uday Reddy</li>
+		<li><i>Quantum computation.</i> Miriam Backens</li>
 		<li><i>Philosophy of computation.</i> Anupam Das, Achim Jung and Aaron Sloman</li>
 		<li><i>Algorithms and complexity.</i> Miriam Backens, Rajesh Chitnis and Anupam Das.</li>
 		<!-- <li><i>Algorithmics.</i> Rajesh Chitnis and Anupam Das.</li> -->
